test/k8sT/manifests/istio-sidecar-init-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: istio-sidecar
specs:
  - endpointSelector:
      matchLabels:
        "zgroup": "bookinfo"
    ingress:
    - fromEntities:
      - host
    egress:
    - toEntities:
      - all
      toPorts:
      - ports:
        - port: "53"
          protocol: UDP
    - toEndpoints:
      - matchLabels:
          "k8s:io.kubernetes.pod.namespace": "istio-system"
